fix alignment

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -139,6 +139,7 @@ a > code {
   margin: auto !important;
   padding: 0.5em 2em !important;
   align-items: initial !important;
+  align-content: center !important;
 }
 
 .home .features h2 {
@@ -177,6 +178,7 @@ a > code {
   border: solid;
   border-color: #4242c7 !important;
   border-width: 1px !important;
+  min-width: 200px !important;
 }
 
 .features-header {
